# actions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  poly.toml  pyproject.toml  renovate.json
.ai-rulez/: .generated-manifest.json  config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
announce-release-discord/: README.md  action.yml
build-and-cache-binding/: action.yml
build-android-natives/: README.md  action.yml
build-csharp-natives/: README.md  action.yml
build-dart-package/: README.md  action.yml
build-docs/: action.yml
build-elixir-hex/: action.yml
build-elixir-natives/: README.md  action.yml
build-go-ffi/: README.md  action.yml
build-gpu-test-binary/: README.md  action.yml
build-ios-xcframework/: README.md  action.yml
build-java-natives/: README.md  action.yml
build-node-napi/: action.yml
build-php-extension/: action.yml
build-python-sdist/: action.yml
build-python-wheels/: action.yml
build-ruby-gem/: action.yml
build-rust-cli/: action.yml
build-rust-ffi/: action.yml
build-swift-artifactbundle/: README.md  action.yml
build-swift-package/: README.md  action.yml
build-wasm-package/: action.yml
build-zig-package/: README.md  action.yml
cache-binding-artifact/: action.yml
check-docker-image-size/: README.md  action.yml
check-r-package/: action.yml
check-registry/: action.yml
configure-maven-gpg/: README.md  action.yml
ensure-gh/: action.yml
finalize-release/: README.md  action.yml
free-disk-space-linux/: action.yml
generate-elixir-checksums/: action.yml
homebrew-build-bottles/: action.yml
homebrew-merge-bottles/: action.yml
install-alef/: action.yml
install-homebrew-linux/: action.yml
install-task/: action.yml
install-wasi-sdk/: action.yml
lint-docs/: action.yml
pack-source-bundle/: action.yml
package-php-pie/: README.md  action.yml
prepare-release-metadata/: action.yml
publish-github-release/: action.yml
publish-gleam/: README.md  action.yml
publish-helm-chart/: action.yml
publish-hex/: action.yml
publish-homebrew/: action.yml
publish-homebrew-source-formulas/: action.yml
publish-maven/: action.yml
publish-maven-gradle/: README.md  action.yml
publish-npm/: action.yml
publish-nuget/: action.yml
publish-packagist/: action.yml
publish-pub/: README.md  action.yml
publish-pypi/: action.yml
publish-r-package/: action.yml
publish-rubygems/: action.yml
publish-swift/: README.md  action.yml
publish-zig/: README.md  action.yml
restore-cargo-cache/: action.yml
retag-for-republish/: action.yml
run-test-apps/: action.yml
tests/fixtures/cli-proxy/pypi/: README.md  pyproject.toml
tests/fixtures/cli-proxy/pypi/cli_proxy_fixture/: __init__.py  cli.py
(+242 files in other folders)
