[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "kreuzberg-actions"
version = "0.0.0"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pytest>=9.0.3",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.14",
  "tomlkit>=0.15.0",
]

[tool.hatch]
build.targets.wheel.packages = [ "scripts" ]

[tool.ruff]
target-version = "py310"
line-length = 120
format.docstring-code-line-length = 120
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401",
  "ASYNC109",
  "ASYNC110",
  "BLE001",
  "COM812",
  "D100",
  "D104",
  "D107",
  "D205",
  "E501",
  "EM",
  "FBT",
  "FIX",      # We allow todo and fixme comments
  "ISC001",
  "PD011",
  "PGH003",
  "PLR2004",
  "PLW0603",
  "S104",
  "S110",
  "S603",
  "TD",       # We allow todo and fixme comments
  "TRY",
]
lint.per-file-ignores."**/scripts/**" = [
  "C901",
  "D101",
  "D102",
  "D103",
  "INP001",
  "PERF401",
  "PLC0415",
  "PLR0912",
  "PLR0915",
  "PLW2901",
  "S607",
  "SIM105",
  "T201",
]
lint.per-file-ignores."**/tests/**/*.*" = [
  "A005",
  "ANN",
  "ARG001",
  "ARG002",
  "ARG005",
  "ASYNC230",
  "BLE001",
  "D",
  "N806",
  "N815",
  "PD",
  "PGH003",
  "PLC",
  "PLR0915",
  "PLR2004",
  "PT006",
  "PT007",
  "PT013",
  "PT017",
  "PT031",
  "RUF012",
  "S",
  "SIM117",
  "SLF001",
]
lint.mccabe.max-complexity = 15
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 10
lint.pylint.max-branches = 15
lint.pylint.max-returns = 10

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.14"

[tool.mypy]
python_version = "3.10"
disable_error_code = [ "import-untyped" ]
explicit_package_bases = true
implicit_reexport = false
show_error_codes = true
strict = true
namespace_packages = true

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.norecursedirs = [ "dist", "build", "*.egg" ]
